--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Partner Catalyst Team Case Studies
-email: sarasp@microsoft.com
+email: sarasp@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
   testbed for case study publication
 baseurl: "" # the subpath of your site, e.g. /blog/
