--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,4 @@ github_username:  sarasp
 # Build settings
 markdown: redcarpet
 # highlighter: pygments
-extensions: [fenced_code_blocks]
+# extensions: [fenced_code_blocks]
