--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,11 @@ url: http://sarasp.github.io" # the base hostname & protocol for your site
 twitter_username: saraspalding
 github_username:  sarasp
 
+
 # Build settings
 # markdown: redcarpet
 # highlighter: pygments
 # extensions: [fenced_code_blocks]
+
+kramdown:
+  input: GFM
