--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,7 @@ github_username:  sarasp
 # Build settings
 # markdown: redcarpet
 # highlighter: pygments
-# extensions: [fenced_code_blocks]
+# extensions: [tables fenced_code_blocks]
 
-# Build settings
-markdown: redcarpet
-highlighter: pygments
-extensions: [tables fenced_code_blocks]
-
-# kramdown:
-#  input: GFM
+kramdown:
+   input: GFM
