--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Partner Catalyst Team Case Studies
 email: sarasp@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
   testbed for case study publication
-baseurl: "/case-studies/" # the subpath of your site, e.g. /blog/
+baseurl: "/case-studies" # the subpath of your site, e.g. /blog/
 url: http://catalystcode.github.io" # the base hostname & protocol for your site
 twitter_username: saraspalding
 github_username:  catalystcode
