--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ baseurl: "/case-studies" # the subpath of your site, e.g. /blog/
 url: http://catalystcode.github.io" # the base hostname & protocol for your site
 twitter_username: saraspalding
 github_username:  catalystcode
+encoding: utf-8
 
 # Build settings
 # markdown: redcarpet
