--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
 - 2.1
 
 install: gem install jekyll html-proofer
-script: jekyll build --config _config_ci.yml && htmlproof ./_site
+script: jekyll build --config _config_ci.yml && htmlproof ./_site --href-ignore "#"
 
 # branch whitelist
 branches:
