Fix all case studies
For the first time, we finally have a non-broken build.

@SaraSp @joshholmes: I’d recommend that going forward, we only accept
case studies that do not break the build and pass html-proofer.
Html-proofer checks if all images and links are reachable.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
 - 2.1
 
 install: gem install jekyll html-proofer
-script: jekyll build --config _config_ci.yml && htmlproof ./_site --href-ignore "#"
+script: jekyll build --config _config_ci.yml && htmlproof ./_site --href-ignore "#,/https:\/\/www\.youtube\.com\/.*/,/http:\/\/www\.youtube\.com\/.*/"
 
 # branch whitelist
 branches:
