Enable Tag Links

--- a/web.config
+++ b/web.config
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
- <system.webServer>
-   <staticContent>
-     <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="1.00:00:00"/>
-   </staticContent>
- </system.webServer>
+    <system.webServer>
+        <staticContent>
+            <remove fileExtension=".svg"/>
+            <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+            <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="1.00:00:00"/>
+        </staticContent>
+    </system.webServer>
 </configuration>
