Update Felix Case Studies
- Added: Author images, code resources, and header images

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ encoding: utf-8
 # highlighter: pygments
 # extensions: [tables fenced_code_blocks]
 
-exclude: [vendor]
+exclude: [vendor, git-tutorial.md, post-template.md]
 kramdown:
    input: GFM
 gems:
